tests/semantic_cases/valid/qualified_call_member_exported.ob0
(* VALID: qualified procedure calls with exported procedures are resolved across module boundaries *)
MODULE Main;
IMPORT B := ModuleB;
BEGIN
  B.HELLO
END Main.
