tests/semantic_cases/invalid/qualified_call_non_exported.ob0
(* INVALID: using a procedure that is not exported from an imported module *)
MODULE Main;
IMPORT B := ModuleB;
BEGIN
    B.NonExportedProcedure()
END Main.
